<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:Context=".MainActivity">
    <item
        android:id="@+id/add"
        android:orderInCategory="1"
        android:title="@string/settings_add" />

    <item
        android:id="@+id/edit"
        android:orderInCategory="2"
        android:title="@string/settings_edit" />

    <item
        android:id="@+id/delete"
        android:orderInCategory="3"
        android:title="@string/settings_delete" />
    <item
        android:id="@+id/find_by_department"
        android:orderInCategory="4"
        android:title="@string/settings_find_by_department" />

    <item
        android:id="@+id/find_by_birth"
        android:orderInCategory="5"
        android:title="@string/settings_find_by_birth" />
</menu>